[gd_scene load_steps=7 format=3 uid="uid://bajbi7xxl56oe"]

[ext_resource type="Script" path="res://scenes/boutique.gd" id="1_bpbud"]
[ext_resource type="Texture2D" uid="uid://ch3n58midp656" path="res://assets/img/boutiquebg.jpg" id="2_2rdr6"]
[ext_resource type="Texture2D" uid="uid://bqrr3o318y4hd" path="res://assets/characters/dahlia_full_body.png" id="3_33knb"]
[ext_resource type="PackedScene" uid="uid://m47064cxfa3k" path="res://scenes/transitions.tscn" id="3_fcd0q"]
[ext_resource type="Texture2D" uid="uid://dl8u2hk4yiw3a" path="res://assets/img/vesper_face.png" id="5_3jwwk"]
[ext_resource type="PackedScene" uid="uid://728fnim4yyl8" path="res://scenes/dialogue_label.tscn" id="6_acg3m"]

[node name="Boutique" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bpbud")

[node name="SceneBg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2rdr6")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 164.0
offset_top = 84.0
offset_right = 392.0
offset_bottom = 323.0
theme_override_constants/separation = 25

[node name="TalkBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Talk"

[node name="ShopBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Shop"

[node name="GoHomeBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Go home"

[node name="SpecialClothes" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
disabled = true
text = "???
(Cha 40+) "

[node name="SexToys" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
disabled = true
text = "??? 
(Lwd 60+)"

[node name="CharacterImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 509.0
offset_top = 34.0
offset_right = 1368.0
offset_bottom = 1834.0
texture = ExtResource("3_33knb")

[node name="DialogBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 223.0
offset_top = -338.0
offset_right = -219.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharPortrait" type="TextureRect" parent="DialogBox"]
visible = false
layout_mode = 0
offset_left = -178.0
offset_top = -79.0
offset_right = 166.0
offset_bottom = 303.0
texture = ExtResource("5_3jwwk")
expand_mode = 1

[node name="DialogueLabel" parent="DialogBox" instance=ExtResource("6_acg3m")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = 21.0
offset_right = -55.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Type here"
messages = Array[String](["Welcome to Dahlia's Boutique. Feel free to browse.", "--- END OF START CONVERSATION ----", "-- TALK ---", "Hello, darling. The name's Dahlia, nice to meet you.", "We've got lots of clothes and some other special items for sale.", "-- END OF TALK --"])

[node name="NamePanel" type="Panel" parent="DialogBox"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 129.0
offset_top = -197.0
offset_right = -1132.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="DialogBox/NamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Transitions" parent="." instance=ExtResource("3_fcd0q")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/TalkBtn" to="." method="_on_talk_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/GoHomeBtn" to="." method="_on_go_home_btn_pressed"]
